Add JsonMap instance variable in JsonMapMaker