@@ -6,8 +6,9 @@ import java.util.Map;
 
 public class ErrorTypeHandler {
 
-    public boolean noInputFoundError(String address)  {
-        return address.isBlank();
+    public boolean noInputFoundError(String address1, String address2) {
+        if (address1 == null || address2 == null) return true; // Null check
+        return (address1.trim().isEmpty() && address2.trim().isEmpty()); // Trim and check
     }
 
     public boolean networkConnectionError() {
